ch4-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: simple-deployment 
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: simple-deployment-app
  template:
    metadata:
      labels: 
        app: simple-deployment-app 
    spec:
      containers:
        - name: busybox 
          image: busybox:1.34.1
          command:
            - sleep
            - "3600"
