ch4-basic-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: myapp 
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 9376 
  selector:
    app: simple-deployment-app
