ch4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-web
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "myweb.packt.com"
      http:
        paths:
        - pathType: Prefix
          path: "/login"
          backend:
            service:
              name: myapp-ext
              port:
                number: 80
